# robust_point_cloud_registration

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/external_pcl_registration/: gicp.h  icp.h  ndt.h
include/point_cloud_registration/: error_term.hpp  icp.h  ndt.h  pda.h  point_cloud_registration.h  probabilistic_weights.hpp  weight_updater_callback.hpp
include/prob_point_cloud_registration/: error_term.hpp  point_cloud_registration_iteration.h  point_cloud_registration_params.hpp  probabilistic_weights.hpp  weight_updater_callback.hpp
include/robust_pcl_registration/: error_term.hpp  pda.h  point_cloud_registration.h  point_cloud_registration_params.hpp  probabilistic_weights.hpp  weight_updater_callback.hpp
include/tools/: utils.hpp
install/: dependencies.rosinstall
launch/: flags_gicp.ff  flags_icp.ff  flags_ipda.ff  flags_ndt.ff  flags_pda.ff  flags_xyz_to_pcd.ff  run.sh
samples/bunny/: source.pcd  target.pcd
src/: gicp.cc  icp.cc  main.cc  main_gicp.cc  main_icp.cc  main_ipda.cc  main_ndt.cc  main_xyz_to_pcd.cc  ndt.cc  pda.cc
src/external_pcl_registration/: gicp.cc  icp.cc  ndt.cc
src/robust_pcl_registration/: pda.cc  point_cloud_registration.cc
test/: PointCloudRegistrationTest.cc  ProbabilisticWeightsTest.cc
